# Etl-medical-data

./: .gitignore  README.md  pyproject.toml
dags/: thaibinhEtl.py
plugins/operators/medicThaiBinh/backup/: loadDimOperator.py  loadFactOperator.py  test.py
plugins/operators/medicThaiBinh/db/: connectDb.json  sparkTb.py  tableDim.json
plugins/operators/medicThaiBinh/dimOperator/: baseLoadOperator.py  loadDimBranch1.py  loadDimBranch2.py  loadDimBranch3.py  loadDimBranch4.py  loadDimBranch5.py  loadTypeOne.py  loadTypeTwo.py
plugins/operators/medicThaiBinh/factOperator/: loadFactCddv.py  loadFactHoaDon.py  loadFactTtdt.py  loadFactTtxn.py
