[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etlTb"
version = "0.0.1"
authors = [
  { name="Chinh", email="chinhnv@gmail.com" },
]
description = "A small example package"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]